# kglite-docs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
demos/: workflow.py
docs/: architecture.md  contributing.md  getting-started.md  implementation-plan.md  index.md  perf.md  privacy.md  publishing.md  requirements.txt  troubleshooting.md  workflows.md
docs/api/: corpus.md  errors.md  types.md
docs/design-history/: initial-plan-2026-05-28.md
sample_data/cross_chunk_fixture/: CASE_TR-7788.md  README.md  expected_findings.json  harness.py
sample_data/mixed/: notes.md  page.html  readme.txt
scripts/: fetch_sample_pdfs.sh  mcp_session.py
src/kglite_docs/: __init__.py  activity.py  agents.py  checkout.py  classify.py  cli.py  cluster.py  context.py  corpus.py  coverage.py  embed.py  enrich.py  errors.py  events.py  export.py  lenses.py  ocr.py  parties.py  quality.py  recommend.py  reports.py  review.py  rounds.py  schema.py  signals.py  store.py  study.py  synthesis.py  tagging.py  testing.py  translate.py  types.py
src/kglite_docs/ingest/: __init__.py  chunker.py  formats.py  hashing.py  parser.py  pipeline.py
src/kglite_docs/mcp_server/: __init__.py  __main__.py  manifest.yaml  server.py  tools.py
src/kglite_docs/mcp_server/manifest.skills/: 00-start-here.md  analyze-documents.md  compare-documents.md  cross-checked-review.md
src/kglite_docs/schemas/: __init__.py  legal.py
tests/: conftest.py  test_agent_templates.py  test_augmented_chunking.py  test_chunker.py  test_classify.py  test_cluster.py  test_concurrency.py  test_coverage.py  test_cross_chunk_fixture.py  test_element_registry.py  test_enrich.py  test_ergonomics.py  test_events.py  test_export.py  test_findings.py  test_formats.py  test_hashing.py  test_ingest.py  test_integration_e2e.py  test_labels.py  test_legal_schema.py  test_mcp_smoke.py  test_ocr_detection.py  test_ocr_export.py  test_ocr_flow.py  test_ocr_illegibility.py  test_ocr_request.py  test_ocr_tiling.py  test_parser_ocr.py  test_parties.py  test_quality.py  test_recommend.py  test_reports.py  test_retrieval_coverage.py  test_review.py  test_rounds.py  test_search_and_compose.py  test_sections.py  test_signals.py  test_structure_chunking.py  (+3 more)
