[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "kglite-docs"
dynamic = ["version"]
description = "Agent-first PDF knowledge base — chunk, embed, cluster, enrich, and serve over MCP. Built on kglite + bge-m3."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["pdf", "rag", "embeddings", "knowledge-graph", "mcp", "kglite", "bge-m3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "kglite>=0.10.4",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "tokenizers>=0.20",
    "huggingface-hub>=0.26",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "pandas>=2.0",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "markdownify>=0.13",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "mcp-methods>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
kglite-docs = "kglite_docs.cli:main"
kglite-docs-mcp = "kglite_docs.mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite-docs"
Repository = "https://github.com/kkollsga/kglite-docs"
Issues = "https://github.com/kkollsga/kglite-docs/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"

[tool.hatch.build.hooks.vcs]
version-file = "src/kglite_docs/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kglite_docs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kglite_docs",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "embed: tests that require the real bge-m3 model (slow; skipped if model not available)",
    "mcp: tests that exercise the MCP server surface",
]
