[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kglite-docs"
# Bump this and push to main — the release.yml workflow checks PyPI
# and publishes if the version is new. No git tag needed.
version = "0.0.9"
description = "Agent-first PDF knowledge base — chunk, embed, cluster, enrich, and serve over MCP. Built on kglite + bge-m3."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["pdf", "rag", "embeddings", "knowledge-graph", "mcp", "kglite", "bge-m3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "kglite>=0.10.9",
    "mcp>=1.0",
    "mcp-methods>=0.3.40",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "tokenizers>=0.20",
    "huggingface-hub>=0.26",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "pandas>=2.0",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "markdownify>=0.13",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
kglite-docs = "kglite_docs.cli:main"
kglite-docs-mcp = "kglite_docs.mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite-docs"
Repository = "https://github.com/kkollsga/kglite-docs"
Issues = "https://github.com/kkollsga/kglite-docs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kglite_docs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kglite_docs",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Scientific code uses `X` for the feature matrix (sklearn convention)
"src/kglite_docs/cluster.py" = ["N803", "N806"]
# Public exception API — `ReviewConflict` reads better than
# `ReviewConflictError` and is already exported through __init__.
"src/kglite_docs/errors.py" = ["N818"]
# Tests are allowed semicolons for compact setup lines.
"tests/*" = ["E702"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
exclude = ["tests/", "build/", "dist/"]

# Third-party libraries that ship no type information.
[[tool.mypy.overrides]]
module = ["reportlab.*", "pymupdf4llm", "pymupdf", "fitz", "docx", "docx.*", "pptx", "pptx.*", "markdownify", "pandas"]
ignore_missing_imports = true

# FastMCP's `@app.tool()` is an untyped decorator; the dispatchers are thin shims.
[[tool.mypy.overrides]]
module = ["kglite_docs.mcp_server.tools"]
disallow_untyped_decorators = false

# Wrapper modules around untyped document libraries (python-docx, pptx, pymupdf).
[[tool.mypy.overrides]]
module = ["kglite_docs.ingest.parser", "kglite_docs.ingest.formats", "kglite_docs.export"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "embed: tests that require the real bge-m3 model (slow; skipped if model not available)",
    "mcp: tests that exercise the MCP server surface",
]
filterwarnings = [
    # pymupdf ships SWIG-generated bindings that trip a CPython 3.12+
    # DeprecationWarning on import — third-party, not fixable here. Scope the
    # ignore tightly to those exact messages so our own warnings stay loud.
    "ignore:builtin type Swig.* has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
